--- a/biome.jsonc
+++ b/biome.jsonc
@@ -65,7 +65,7 @@
                 "useDefaultParameterLast": "error",
                 "useEnumInitializers": "error",
                 "useSelfClosingElements": "error",
-                "useConst": "error",
+                "useConst": "off",
                 "useSingleVarDeclarator": "error",
                 "noUnusedTemplateLiteral": "error",
                 "useNumberNamespace": "error",
