--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "@loopui/fetch-router",
+    "name": "@loopui/server",
     "version": "0.1.0",
     "type": "module",
     "repository": {
         "type": "git",
         "url": "https://github.com/loopui/loop.git",
-        "directory": "packages/fetch-router"
+        "directory": "packages/server"
     },
-    "homepage": "https://github.com/loopui/loop/tree/main/packages/fetch-router#readme",
+    "homepage": "https://github.com/loopui/loop/tree/main/packages/server#readme",
     "bugs": {
         "url": "https://github.com/loopui/loop/issues"
     },
