--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -28,7 +28,7 @@
         "LICENSE"
     ],
     "dependencies": {
-        "@loopui/interaction": "workspace:*"
+        "@loopui/events": "workspace:*"
     },
     "devDependencies": {
         "@biomejs/biome": "catalog:dev",
